# pedestrian_forecasting

./: README.md  config.py  fc_pipeline_footTraffic.ipynb  pyproject.toml  quickstart_demo.ipynb
code_old/: fc_pipeline_footTraffic_deseaonalize_v2.ipynb  fc_pipeline_footTraffic_original.ipynb  fc_pipeline_footTraffic_v2.ipynb  fc_pipeline_footTraffic_v2_presentation.ipynb
data_foot_traffic/: counter_locations.csv  pedestrians_val_test_forecasts.csv  sample_submission.csv  solution.csv  submission.csv  test.csv  val_test_actuals.csv
data_general/: bavarian_public_holidays_daily.csv  bavarian_public_holidays_detailed.csv  bavarian_school_holidays_daily.csv  bavarian_school_holidays_detailed.csv  events_daily.csv  events_detailed.csv  lectures.csv  lectures_daily.csv
foot_traffic_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  evaluation.py  features.py  modeling.py  uncertainty.py  visualization.py
